common：包装发送告警的全局序列化类